--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.4.3",
     "flexboxgrid2": "^7.2.1",
     "normalize.css": "^8.0.0",
+    "rc-progress": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
