--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "babel-plugin-import": "^1.7.0",
     "react-app-rewired": "^1.5.0"
   }
