--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,12 @@
     "browser": true
   },
   "rules": {
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "no-mixed-operators": "off",
+    "class-methods-use-this": "off",
+    "no-console": "off",
+    "no-plusplus": "off",
+    "no-new": "off"
   },
   "settings": {
     "import/resolver": {
