--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flexboxgrid2": "^7.2.1",
     "mdi-react": "^3.3.0",
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
@@ -20,12 +21,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "babel-plugin-import": "^1.7.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "babel-plugin-import": "^1.7.0",
     "react-app-rewired": "^1.5.0"
   }
 }
