--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,25 @@
 sudo: false
-
 language: node_js
 node_js:
-- '10.1.0'
-
+- 10.1.0
 dist: trusty
-
 addons:
   ssh_known_hosts:
   - gzaripov.com
-
 cache:
   yarn: true
   directories:
-    - node_modules
-
+  - node_modules
 before_install:
 - openssl aes-256-cbc -K $encrypted_6313b2c171ce_key -iv $encrypted_6313b2c171ce_iv
-  -in .travis/deploy_rsa.enc -out .travis/deploy_rsa -d    
-
+  -in deploy_rsa.enc -out deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_6313b2c171ce_key -iv $encrypted_6313b2c171ce_iv
+  -in .travis/deploy_rsa.enc -out .travis/deploy_rsa -d
 before_deploy:
-  - yarn build
-
+- yarn build
 deploy:
-  - provider: script
-    skip_cleanup: true
-    script: ".travis/deploy.sh"
-    on:
-      branch: master
+- provider: script
+  skip_cleanup: true
+  script: ".travis/deploy.sh"
+  on:
+    branch: master
