--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-app-rewired test --env=jsdom"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
