--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ dist: trusty
 addons:
   ssh_known_hosts:
   - gzaripov.com
+  apt:
+    packages:
+      - libgmp3-dev
 cache:
   yarn: true
   directories:
@@ -13,6 +16,10 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_6313b2c171ce_key -iv $encrypted_6313b2c171ce_iv
   -in .travis/deploy_rsa.enc -out .travis/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- cp .travis/id_rsa ~/.ssh/id_rsa
+- chmod 600 ~/.ssh/id_rsa
+- ssh-add ~/.ssh/id_rsa  
 before_deploy:
 - yarn build
 deploy:
