--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_deploy:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: ".travis/deploy.sh"
+  script: bash .travis/deploy.sh
   on:
     branch: master
