--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_6313b2c171ce_key -iv $encrypted_6313b2c171ce_iv
   -in .travis/deploy_rsa.enc -out .travis/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - cp .travis/deploy_rsa ~/.ssh/id_rsa
+  - chmod 600 ~/.ssh/id_rsa
+  - ssh-add ~/.ssh/id_rsa
 before_deploy:
 - yarn build
 deploy:
