--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-animated-burgers": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "styled-components": "^3.2.3"
