--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-animated-burgers": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "styled-components": "^3.2.3"
+    "styled-components": "^3.2.3",
+    "react-app-rewired": "^1.5.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -26,7 +27,6 @@
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "react-app-rewired": "^1.5.0"
+    "eslint-plugin-react": "^7.4.0"
   }
 }
