--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-animated-burgers": "^1.1.0",
+    "react-app-rewired": "^1.5.0",
     "react-dom": "^16.2.0",
+    "react-responsive-modal": "^3.0.1",
     "react-scripts": "1.1.1",
-    "styled-components": "^3.2.3",
-    "react-app-rewired": "^1.5.0"
+    "styled-components": "^3.2.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
