--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rematch/core": "^0.6.0",
     "antd": "^3.4.3",
     "flexboxgrid2": "^7.2.1",
     "mdi-react": "^3.3.0",
@@ -12,6 +13,7 @@
     "react-animated-burgers": "^1.1.0",
     "react-app-rewired": "^1.5.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.0.1",
     "react-scripts": "1.1.1",
     "styled-components": "^3.2.3"
