--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rematch/core": "^0.6.0",
     "antd": "^3.4.3",
     "flexboxgrid2": "^7.2.1",
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.10",
     "mdi-react": "^3.3.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
@@ -16,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.0.1",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
     "styled-components": "^3.2.3"
   },
   "scripts": {
