--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^4.0.0",
+    "save-file": "^1.2.0",
     "styled-components": "^3.2.3",
     "uniqid": "^4.1.1"
   },
