--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-styled-components": "^1.5.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "^2.7.0",
