--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,9 @@
   },
   "rules": {
     "react/jsx-filename-extension": "off",
-    "no-mixed-operators": "off",
     "class-methods-use-this": "off",
+    "no-mixed-operators": "off",
+    "no-return-assign": "off",
     "no-console": "off",
     "no-plusplus": "off",
     "no-new": "off"
