--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+yarn.lock
 .idea
 .vscode
 ~*
