--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts-ts": "2.16.0",
     "@rematch/core": "^0.6.0",
     "@rematch/persist": "^0.2.1",
     "antd": "^3.4.3",
@@ -12,30 +15,28 @@
     "mdi-react": "^3.3.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
     "react-animated-burgers": "^1.1.0",
     "react-app-rewired": "^1.5.0",
-    "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.1",
     "redux": "^4.0.0",
     "save-file": "^1.2.0",
     "styled-components": "^3.2.3",
     "uniqid": "^4.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom --watchAll",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/jest": "^23.1.2",
+    "@types/node": "^10.3.6",
+    "@types/react": "^16.4.2",
+    "@types/react-dom": "^16.0.6",
+    "typescript": "^2.9.2",
     "babel-eslint": "^8.2.2",
     "babel-plugin-import": "^1.7.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "babel-plugin-styled-components": "^1.5.1"
   }
 }
