--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0",
     "@rematch/core": "^0.6.0",
     "@rematch/persist": "^0.2.1",
     "antd": "^3.4.3",
@@ -15,9 +12,12 @@
     "mdi-react": "^3.3.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
+    "react": "^16.4.1",
     "react-animated-burgers": "^1.1.0",
     "react-app-rewired": "^1.5.0",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
     "save-file": "^1.2.0",
     "styled-components": "^3.2.3",
@@ -34,9 +34,11 @@
     "@types/node": "^10.3.6",
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
-    "typescript": "^2.9.2",
+    "@types/react-redux": "^6.0.3",
     "babel-eslint": "^8.2.2",
     "babel-plugin-import": "^1.7.0",
-    "babel-plugin-styled-components": "^1.5.1"
+    "babel-plugin-styled-components": "^1.5.1",
+    "tslint-config-prettier": "^1.13.0",
+    "typescript": "^2.9.2"
   }
 }
