--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "devDependencies": {
     "@types/jest": "^23.1.2",
-    "@types/node": "^10.3.6",
+    "@types/node": "^10.5.1",
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.3",
+    "@types/uniqid": "^4.1.2",
     "babel-eslint": "^8.2.2",
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-styled-components": "^1.5.1",
